style: fixig layout issue in the projects section

--- a/src/Features/SectionThree/SectionThree.css
+++ b/src/Features/SectionThree/SectionThree.css
@@ -17,7 +17,8 @@
 .sectionThree__bottom{
     align-self: flex-start;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 20px;
+    width: 100%;
   
 }
